@@ -9,3 +9,7 @@ SUBDIRS = gconf backends wrappers po intl doc $(GCONF_EDITOR)
 
 bin_SCRIPTS = gconf-config
 
+m4datadir=$(datadir)/aclocal
+m4data_DATA=gconf.m4
+
+EXTRA_DIST=gconf-config.in gconf.m4
