@@ -1,3 +1,11 @@
+1999-11-18  Elliot Lee  <sopwith@redhat.com>
+
+	* gconf.m4: AM_PATH_GCONF macro.
+	
+	* wrappers/gtk/Makefile.am, autogen.sh, backends/Makefile.am: Work with builddir != srcdir
+
+	* Makefile.am: Distribute gconf.m4 & gconf-config.in, install gconf.m4
+
 1999-11-18  Havoc Pennington  <hp@pobox.com>
 
 	* gconf/gconfd.c (gconf_server_load_sources): fix the message
@@ -979,4 +987,3 @@
 1999-08-29  Kjartan Maraas  <kmaraas@online.no>
 
 	* configure.in: Added "no" to ALL_LINGUAS
-	
